Changes
=======

Silva 2.3.2-bethel.5(unlreleased)
--------------------------------

- Add optional parameter to enable publishing in the past

Silva 2.3.2-bethel.4 (2012-02-16)
---------------------------------

- Adjust publication request email subjects so gmail doesn't group
  them all into one conversation.

Silva 2.3.2-bethel.3 (2011-12-15)
---------------------------------

- Adjusted the sticky content service smi tab to provider information and a jump
  point to create a local site first, since that is required to have a sticky 
  service

Silva 2.3.2-bethel.2 (2011-11-14)
---------------------------------

- fixed bug in EmailMessageService - the schema field for enabling
  the message service was not named correctly.  It was '_enable' and
  should have been '_enabled'.  This was preventing the email service
  from ever actually being enabled (even though the ZMI form said
  it was)

- fixed sticky content tab, so it shows all layouts


Silva 2.3.2-bethel.1 (2011-09-23)
---------------------------------

- merged Products.Silva-2.3.2 with bethel's branch

Silva 2.3.2 (2011-07-27)
------------------------

- Fix an Acquisition issue while looking for users in service Members.

- Fix image display in XSLT renderer to high resolution.

- Fix a cache issue on the Welcome page.

- Update forms to correctly display multi-choice widgets.

- Improve SMI template.

Silva 2.3.2dev-bethel.7 (2011-09-11)
------------------------------------
- add button styles to tinymce-content.css

Silva 2.3.2dev-bethel.6 (2011-08-31)
------------------------------------

- adjusted the zope root default view so it is accessible to the public.  It now
  displays a 'login to add a silva root' button, without the form.  Bethel needs
  unauthenticated access to the root of zope for monitoring purposes

Silva 2.3.2dev-bethel.5 (2011-08-29)
------------------------------------

- fix object lookup window add drop-down (to use the new adding view)


Silva 2.3.2dev-bethel.4 (2011-08-19)